# 99Haskells

./: .gitignore  99problems.cabal  README.md
src/: NineNineProblems.hs
src/tests/: NineNineProblemsTest.hs  TestsMain.hs
